# crud

./: db.sqlite3  pyproject.toml
core/: asgi.py  custom_perms.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
core/migrations/: 0001_initial.py
crud/: admin.py  models.py  serializers.py  urls.py  views.py
crud/migrations/: 0001_initial.py  0002_rename_desciption_product_description.py
